--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/font-awesome/scss/font-awesome.scss",
-              "src/assets/css/style.scss"
+              "src/assets/css/styles.scss"
             ],
             "scripts": []
           },
@@ -104,7 +104,7 @@
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/font-awesome/scss/font-awesome.scss",
-              "src/assets/css/style.scss"
+              "src/assets/css/styles.scss"
             ],
             "assets": [
               "src/assets",
