--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng-connection-service": "^1.0.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
     "rxjs": "^6.5.3",
-    "zone.js": "^0.9.1",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.20",
