--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
@@ -24,34 +25,36 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "ng-connection-service": "^1.0.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.0.0-rc.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/build-angular": "~0.803.20",
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "~2.8.3",
+    "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@types/node": "^12.12.14",
+    "codelyzer": "^5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^6.0.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-junit-reporter": "^2.0.1",
+    "protractor": "^5.4.2",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
     "typescript": "~3.5.3"
   }
 }
