--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "ng-connection-service": "^1.0.4",
+    "ngx-chips": "^2.1.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
     "rxjs": "^6.5.3",
@@ -41,6 +44,7 @@
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.31",
     "@types/node": "^12.12.14",
     "codelyzer": "^5.2.0",
     "jasmine-core": "~3.5.0",
